--- a/Unity.Hotfix.csproj
+++ b/Unity.Hotfix.csproj
@@ -60,13 +60,11 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\2022.3.34f1c1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Hotfix\Old\Utility\Web\WebHelper.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Expand\PanelType\PanelTypeExpand.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Config\Tables.cs" />
     <Compile Include="Assets\Hotfix\NewFramework\ObjectPool\ObjectBase.cs" />
-    <Compile Include="Assets\Hotfix\Old\Helper\Random\RandomHelper.cs" />
-    <Compile Include="Assets\Hotfix\Old\Helper\Object\ObjectHelper.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Singleton\ISingleton.cs" />
-    <Compile Include="Assets\Hotfix\Old\Helper\Network\NetworkHelper.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Expand\GameObject\GameObjectExpand.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\SceneState\SceneState.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\Jump\JumpManager.cs" />
@@ -74,17 +72,17 @@
     <Compile Include="Assets\Hotfix\NewFramework\Base\GameFrameworkModule.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\Panel\MVVM\View\ViewModel\ViewModelBase.cs" />
     <Compile Include="Assets\Hotfix\NewFramework\Base\EventPool\EventPoolMode.cs" />
+    <Compile Include="Assets\Hotfix\Old\Utility\Random\RandomHelper.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\SceneState\SceneStateManager.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\Panel\PanelType.cs" />
     <Compile Include="Assets\Hotfix\Old\Expand\Awaiter\AwaiterExpand.cs" />
-    <Compile Include="Assets\Hotfix\Old\Helper\Serialize\SerializeHelper.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Module\Logger\Logger.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\Model\ModelManager.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Coroutine\CoroutineObject.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\SceneState\SceneStateAttribute.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\Orca\OrcaManager.cs" />
-    <Compile Include="Assets\Hotfix\Old\Runtime\GlobalConfig\AssetType\AssetType.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Singleton\ISingletonUpdate.cs" />
+    <Compile Include="Assets\Hotfix\Old\Utility\Protobuf\ProtobufHelper.cs" />
     <Compile Include="Assets\Hotfix\Old\Logic\SceneState\LoginSceneState.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Object\Root.cs" />
     <Compile Include="Assets\Hotfix\NewFramework\Event\GameEventArgs.cs" />
@@ -98,6 +96,7 @@
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Object\Base\AttributeBase.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\SceneState\ISceneState.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\Command\CommandManager.cs" />
+    <Compile Include="Assets\Hotfix\Old\Utility\Serialize\SerializeHelper.cs" />
     <Compile Include="Assets\Hotfix\Old\Logic\EventHandler\InitEventHandler.cs" />
     <Compile Include="Assets\Hotfix\Old\Logic\SceneState\GameSceneState.cs" />
     <Compile Include="Assets\Hotfix\NewFramework\Base\ReferencePool\IReference.cs" />
@@ -110,16 +109,14 @@
     <Compile Include="Assets\Hotfix\NewFramework\Base\GameFrameworkEventArgs.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\ScrollerPro\LoopScrollItem.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Object\AStarMap\AStarNodeData.cs" />
-    <Compile Include="Assets\Hotfix\Old\Helper\Sort\SortHelper.cs" />
     <Compile Include="Assets\Hotfix\Old\Expand\Vector3\Vector3Expand.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\Download\DownloadData.cs" />
     <Compile Include="Assets\Hotfix\NewFramework\Base\ReferencePool\ReferencePoolInfo.cs" />
-    <Compile Include="Assets\Hotfix\Old\Helper\ScreenAdaptation\ScreenAdaptationHelper.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\Archive\DisplayModeType.cs" />
     <Compile Include="Assets\Hotfix\Old\Logic\SceneState\MainSceneState.cs" />
     <Compile Include="Assets\Hotfix\Old\Awaiter\AsyncOperationAwaiter.cs" />
+    <Compile Include="Assets\Hotfix\Old\Utility\File\FileHelper.cs" />
     <Compile Include="Assets\Hotfix\NewFramework\Base\GameFrameworkMultiDictionary.cs" />
-    <Compile Include="Assets\Hotfix\Old\Helper\File\FileHelper.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\Panel\MVVM\View\View\IView.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Singleton\ISingletonFixedUpdate.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\Download\DownloadManager.cs" />
@@ -130,13 +127,13 @@
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\RedDot\RedDotManager.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\Archive\CVType.cs" />
     <Compile Include="Assets\Hotfix\NewFramework\ObjectPool\ObjectPoolBase.cs" />
+    <Compile Include="Assets\Hotfix\Old\Utility\Action\ActionWrap.cs" />
     <Compile Include="Assets\Hotfix\NewFramework\Base\DataStruct\TypeNamePair.cs" />
-    <Compile Include="Assets\Hotfix\Old\Helper\Json\JsonHelper.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\RedDot\RedDot.cs" />
     <Compile Include="Assets\Hotfix\Old\Expand\SpriteRenderer\SpriteRendererExpand.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Object\AStarMap\AStarMap.cs" />
     <Compile Include="Assets\Hotfix\Old\Logic\Model\MainModel.cs" />
-    <Compile Include="Assets\Hotfix\Old\Helper\Action\ActionWrap.cs" />
+    <Compile Include="Assets\Hotfix\Old\Utility\Resolution\ResolutionHelper.cs" />
     <Compile Include="Assets\Hotfix\NewFramework\ObjectPool\ObjectInfo.cs" />
     <Compile Include="Assets\Hotfix\NewFramework\Base\ReferencePool\ReferencePool.ReferenceCollection.cs" />
     <Compile Include="Assets\Hotfix\Old\Expand\Image\ImageExpand.cs" />
@@ -158,19 +155,16 @@
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Coroutine\CoroutineHandler.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\Language\LanguageManager.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Object\Base\ILateUpdate.cs" />
-    <Compile Include="Assets\Hotfix\Old\Helper\Resolution\ResolutionHelper.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\Command\CommandData.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\Config\ConfigManager.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Module\MainThreadSynchronizationContext\ThreadSynchronizationContext.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Singleton\Singleton.cs" />
-    <Compile Include="Assets\Hotfix\Old\Helper\Web\WebHelper.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Singleton\ISingletonLateUpdate.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Module\EventSystem\Event\AEvent.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\Panel\MVVM\View\Binding\Binding.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\Panel\Panel.cs" />
     <Compile Include="Assets\Hotfix\NewFramework\Event\EventManager.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Module\Time\Time.cs" />
-    <Compile Include="Assets\Hotfix\Old\Helper\Protobuf\ProtobufHelper.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\Archive\UserSetData.cs" />
     <Compile Include="Assets\Hotfix\Old\UnOrderMultiMapSet.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Module\Timer\TimerType.cs" />
@@ -179,7 +173,6 @@
     <Compile Include="Assets\Hotfix\Old\Expand\GameObject\GameObjectExpand.cs" />
     <Compile Include="Assets\Hotfix\Old\Awaiter\UnityWebRequestAsyncOperationAwaiter.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Coroutine\CoroutineCompletedHandler.cs" />
-    <Compile Include="Assets\Hotfix\Old\Runtime\GlobalConfig\SceneName\SceneName.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Object\Base\IFixedUpdate.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Init\Init.cs" />
     <Compile Include="Assets\Hotfix\NewFramework\ObjectPool\ObjectPoolManager.ObjectPool.cs" />
@@ -187,13 +180,15 @@
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\ScrollerPro\LoopScroll.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\Download\DownloadFile.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\Model\ModelAttribute.cs" />
-    <Compile Include="Assets\Hotfix\Old\Helper\Id\IdHelper.cs" />
+    <Compile Include="Assets\Hotfix\Old\Utility\Network\NetworkHelper.cs" />
     <Compile Include="Assets\Hotfix\NewFramework\Base\GameFrameworkLinkedListRange.cs" />
+    <Compile Include="Assets\Hotfix\Old\Utility\MD5\MD5Helper.cs" />
     <Compile Include="Assets\Hotfix\Old\Expand\Vector2\Vector2Expand.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\Panel\UI\IPanelHandler.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\SceneState\SceneStateType.cs" />
     <Compile Include="Assets\Hotfix\NewFramework\ObjectPool\ObjectPoolManager.cs" />
     <Compile Include="Assets\Hotfix\Old\Logic\UI\Panel\Login\LoginPanel.cs" />
+    <Compile Include="Assets\Hotfix\Old\Utility\Json\JsonHelper.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Object\ProtobufObject.cs" />
     <Compile Include="Assets\Hotfix\NewFramework\Utility\Utility.Marshal.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\HotfixBridge.cs" />
@@ -204,6 +199,7 @@
     <Compile Include="Assets\Hotfix\NewFramework\Base\GameFrameworkLinkedList.cs" />
     <Compile Include="Assets\Hotfix\Old\Logic\UI\Panel\Game\GamePanel.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Object\Base\AObjectBase.cs" />
+    <Compile Include="Assets\Hotfix\Old\Utility\Sort\SortHelper.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Object\GameObjectComponent.cs" />
     <Compile Include="Assets\Hotfix\NewFramework\Utility\Utility.Text.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Config\TBJump.cs" />
@@ -221,8 +217,11 @@
     <Compile Include="Assets\Hotfix\NewFramework\Base\Log\GameFrameworkLog.cs" />
     <Compile Include="Assets\Hotfix\NewFramework\Event\IEventManager.cs" />
     <Compile Include="Assets\Hotfix\NewFramework\Base\GameFrameworkEntry.cs" />
+    <Compile Include="Assets\Hotfix\Old\Utility\Object\ObjectHelper.cs" />
     <Compile Include="Assets\Hotfix\NewFramework\Base\EventPool\BaseEventArgs.cs" />
+    <Compile Include="Assets\Hotfix\Old\Utility\Id\IdHelper.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Module\EventSystem\EventSystem.cs" />
+    <Compile Include="Assets\Hotfix\Old\Utility\ScreenAdaptation\ScreenAdaptationHelper.cs" />
     <Compile Include="Assets\Hotfix\NewFramework\Base\Variable\Variable.cs" />
     <Compile Include="Assets\Hotfix\NewFramework\Base\ReferencePool\ReferencePool.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\Panel\PanelManager.cs" />
@@ -230,7 +229,6 @@
     <Compile Include="Assets\Hotfix\Old\Expand\UnityWebRequest\UnityWebRequestExpand.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\ScrollerPro\LoopScrollItemPool.cs" />
     <Compile Include="Assets\Hotfix\NewFramework\Base\Variable\GenericVariable.cs" />
-    <Compile Include="Assets\Hotfix\Old\Helper\MD5\MD5Helper.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Config\Jump.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -573,6 +571,10 @@
       <HintPath>C:\Program Files\Unity\Hub\Editor\2022.3.34f1c1\Editor\Data\Managed\UnityEditor.Graphs.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="UnityEditor.Android.Extensions">
+      <HintPath>C:\Program Files\Unity\Hub\Editor\2022.3.34f1c1\Editor\Data\PlaybackEngines\AndroidPlayer\UnityEditor.Android.Extensions.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="UnityEditor.WindowsStandalone.Extensions">
       <HintPath>C:\Program Files\Unity\Hub\Editor\2022.3.34f1c1\Editor\Data\PlaybackEngines\WindowsStandaloneSupport\UnityEditor.WindowsStandalone.Extensions.dll</HintPath>
       <Private>False</Private>
@@ -787,6 +789,18 @@
     </Reference>
     <Reference Include="Unity.Analytics.StandardEvents">
       <HintPath>Library\PackageCache\com.unity.analytics@3.8.1\AnalyticsStandardEvents\Unity.Analytics.StandardEvents.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Unity.Android.Types">
+      <HintPath>C:\Program Files\Unity\Hub\Editor\2022.3.34f1c1\Editor\Data\PlaybackEngines\AndroidPlayer\Unity.Android.Types.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Unity.Android.Gradle">
+      <HintPath>C:\Program Files\Unity\Hub\Editor\2022.3.34f1c1\Editor\Data\PlaybackEngines\AndroidPlayer\Unity.Android.Gradle.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Unity.Android.GradleProject">
+      <HintPath>C:\Program Files\Unity\Hub\Editor\2022.3.34f1c1\Editor\Data\PlaybackEngines\AndroidPlayer\Unity.Android.GradleProject.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="mscorlib">
