--- a/Unity.Model.csproj
+++ b/Unity.Model.csproj
@@ -66,9 +66,12 @@
     <Compile Include="Assets\Launcher\UI\ForeGround\BlackFadeMask.cs" />
     <Compile Include="Assets\Launcher\Event\EventDriver.cs" />
     <Compile Include="Assets\Launcher\UGUIExpand\LongClickButton.cs" />
+    <Compile Include="Assets\Launcher\Utility\MD5\MD5Utility.cs" />
     <Compile Include="Assets\Launcher\Utility\Path\PathUtility.cs" />
+    <Compile Include="Assets\Launcher\Expand\String\StringExpand.cs" />
     <Compile Include="Assets\Launcher\Asset\AssetObject.cs" />
     <Compile Include="Assets\Launcher\Launcher\Patch\PatchOperation.cs" />
+    <Compile Include="Assets\Launcher\Utility\Protobuf\ProtobufUtility.cs" />
     <Compile Include="Assets\Launcher\Launcher\StaticMethod\ILStaticMethod.cs" />
     <Compile Include="Assets\Launcher\Asset\AssetManager.cs" />
     <Compile Include="Assets\Launcher\Launcher\Patch\FsmNode\FsmCreateDownloader.cs" />
@@ -76,6 +79,7 @@
     <Compile Include="Assets\Launcher\Launcher\Launcher.Notice.cs" />
     <Compile Include="Assets\Launcher\Math\OBB.cs" />
     <Compile Include="Assets\Launcher\Event\IEventMessage.cs" />
+    <Compile Include="Assets\Launcher\Utility\File\FileUtility.cs" />
     <Compile Include="Assets\Launcher\Launcher\Init.cs" />
     <Compile Include="Assets\Launcher\GameConfig\GameConfig.Version.cs" />
     <Compile Include="Assets\Launcher\UI\ForeGround\UIForeGroundPanel.cs" />
@@ -107,6 +111,8 @@
     <Compile Include="Assets\Launcher\Utility\Path\PathType.cs" />
     <Compile Include="Assets\Launcher\Machine\StateMachine.cs" />
     <Compile Include="Assets\Launcher\ScrollerPro\ScrollerProEx.cs" />
+    <Compile Include="Assets\Launcher\Utility\Json\JsonUtility.cs" />
+    <Compile Include="Assets\Launcher\Utility\Serialize\SerializeUtility.cs" />
     <Compile Include="Assets\Launcher\Launcher\Launcher.UpdateVersion.cs" />
     <Compile Include="Assets\Launcher\Launcher\Patch\FsmNode\FsmClearCache.cs" />
     <Compile Include="Assets\Launcher\Launcher\Patch\FsmNode\FsmDownloadOver.cs" />
