--- a/Unity.Hotfix.csproj
+++ b/Unity.Hotfix.csproj
@@ -67,8 +67,8 @@
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Expand\GameObject\GameObjectExpand.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\SceneState\SceneState.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\Jump\JumpManager.cs" />
-    <Compile Include="Assets\Hotfix\NewFramework\Base\Log\GameFrameworkLog.ILogHelper.cs" />
     <Compile Include="Assets\Hotfix\NewFramework\Base\GameFrameworkModule.cs" />
+    <Compile Include="Assets\Hotfix\NewFramework\Base\MultiDictionary.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\Panel\MVVM\View\ViewModel\ViewModelBase.cs" />
     <Compile Include="Assets\Hotfix\NewFramework\Base\EventPool\EventPoolMode.cs" />
     <Compile Include="Assets\Hotfix\Old\Utility\Random\RandomUtility.cs" />
@@ -108,16 +108,18 @@
     <Compile Include="Assets\Hotfix\NewFramework\Base\GameFrameworkEventArgs.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\ScrollerPro\LoopScrollItem.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Object\AStarMap\AStarNodeData.cs" />
+    <Compile Include="Assets\Hotfix\NewFramework\Base\LinkedListRange.cs" />
     <Compile Include="Assets\Hotfix\Old\Expand\Vector3\Vector3Expand.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\Download\DownloadData.cs" />
     <Compile Include="Assets\Hotfix\NewFramework\Base\ReferencePool\ReferencePoolInfo.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\Archive\DisplayModeType.cs" />
+    <Compile Include="Assets\Hotfix\NewFramework\Base\Log\ILogHelper.cs" />
     <Compile Include="Assets\Hotfix\Old\Logic\SceneState\MainSceneState.cs" />
     <Compile Include="Assets\Hotfix\Old\Awaiter\AsyncOperationAwaiter.cs" />
-    <Compile Include="Assets\Hotfix\NewFramework\Base\GameFrameworkMultiDictionary.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\Panel\MVVM\View\View\IView.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Singleton\ISingletonFixedUpdate.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\Download\DownloadManager.cs" />
+    <Compile Include="Assets\Hotfix\NewFramework\Base\Log\LogLevel.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Object\Scene.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Object\Numeric\NumericType.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\Audio\AudioManager.cs" />
@@ -130,13 +132,12 @@
     <Compile Include="Assets\Hotfix\Old\Expand\SpriteRenderer\SpriteRendererExpand.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Object\AStarMap\AStarMap.cs" />
     <Compile Include="Assets\Hotfix\Old\Logic\Model\MainModel.cs" />
+    <Compile Include="Assets\Hotfix\NewFramework\Base\LinkedList.cs" />
     <Compile Include="Assets\Hotfix\NewFramework\ObjectPool\ObjectInfo.cs" />
     <Compile Include="Assets\Hotfix\NewFramework\Base\ReferencePool\ReferencePool.ReferenceCollection.cs" />
     <Compile Include="Assets\Hotfix\Old\Expand\Image\ImageExpand.cs" />
-    <Compile Include="Assets\Hotfix\NewFramework\Base\GameFrameworkException.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Module\EventSystem\Event\EventData.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\Download\DownloadState.cs" />
-    <Compile Include="Assets\Hotfix\NewFramework\Base\Log\GameFrameworkLogLevel.cs" />
     <Compile Include="Assets\Hotfix\Old\Logic\Model\LoginModel.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Object\Game.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Module\EventSystem\Event\EventAttribute.cs" />
@@ -161,6 +162,7 @@
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\Panel\Panel.cs" />
     <Compile Include="Assets\Hotfix\NewFramework\Event\EventManager.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Module\Time\Time.cs" />
+    <Compile Include="Assets\Hotfix\NewFramework\Utility\MarshalUtility.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\Archive\UserSetData.cs" />
     <Compile Include="Assets\Hotfix\Old\UnOrderMultiMapSet.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Module\Timer\TimerType.cs" />
@@ -177,26 +179,24 @@
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\ScrollerPro\LoopScroll.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\Download\DownloadFile.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\Model\ModelAttribute.cs" />
-    <Compile Include="Assets\Hotfix\NewFramework\Base\GameFrameworkLinkedListRange.cs" />
     <Compile Include="Assets\Hotfix\Old\Expand\Vector2\Vector2Expand.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\Panel\UI\IPanelHandler.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\SceneState\SceneStateType.cs" />
     <Compile Include="Assets\Hotfix\NewFramework\ObjectPool\ObjectPoolManager.cs" />
     <Compile Include="Assets\Hotfix\Old\Logic\UI\Panel\Login\LoginPanel.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Object\ProtobufObject.cs" />
-    <Compile Include="Assets\Hotfix\NewFramework\Utility\Utility.Marshal.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\HotfixBridge.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\Command\CommandType.cs" />
     <Compile Include="Assets\Hotfix\Old\Log\LogHelper.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\Video\VideoManager.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\Panel\UI\UIPanel.cs" />
-    <Compile Include="Assets\Hotfix\NewFramework\Base\GameFrameworkLinkedList.cs" />
     <Compile Include="Assets\Hotfix\Old\Logic\UI\Panel\Game\GamePanel.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Object\Base\AObjectBase.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Object\GameObjectComponent.cs" />
     <Compile Include="Assets\Hotfix\NewFramework\Utility\Utility.Text.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Config\TBJump.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Module\EventSystem\Event\EventType.cs" />
+    <Compile Include="Assets\Hotfix\NewFramework\Base\Log\Log.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Module\Timer\TimerData.cs" />
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Object\Pool\APool.cs" />
     <Compile Include="Assets\Hotfix\NewFramework\Base\EventPool\EventPool.cs" />
@@ -208,7 +208,6 @@
     <Compile Include="Assets\Hotfix\Old\Runtime\Core\Manager\Archive\ArchiveManager.cs" />
     <Compile Include="Assets\Hotfix\Old\Awaiter\Action\ActionWrap.cs" />
     <Compile Include="Assets\Hotfix\NewFramework\Base\EventPool\EventPool.Event.cs" />
-    <Compile Include="Assets\Hotfix\NewFramework\Base\Log\GameFrameworkLog.cs" />
     <Compile Include="Assets\Hotfix\NewFramework\Event\IEventManager.cs" />
     <Compile Include="Assets\Hotfix\NewFramework\Base\GameFrameworkEntry.cs" />
     <Compile Include="Assets\Hotfix\NewFramework\Base\EventPool\BaseEventArgs.cs" />
